@@ -2,6 +2,7 @@
 	* [Console] Removed loop
 	* [Renderer] Removed OpenMP from the source code
 	* [Server] Added checking for the user inside "idServerCcmdsSystemLocal::Status_f"
+	* [Client] Fixed problems with "reconnecting" message in the console
 
 2021-04-27 Dusan Jocic <dusanjocic@msn>
 	* [Community Server] Fixed crash if community server refuse connection from the engine
